--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
@@ -16,7 +23,8 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 * {
@@ -93,8 +101,12 @@ h6 {
   font-weight: 600;
   border-radius: 2rem;
   letter-spacing: 0.05em;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   overflow: hidden;
   position: relative;
   height: 2.8em;
@@ -102,9 +114,16 @@ h6 {
   padding-right: 3.3em;
   padding-left: 1rem;
   cursor: pointer;
-  justify-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
 
   /* Smooth transition for background and text color */
+  -webkit-transition:
+    background-color 0.4s ease,
+    color 0.4s ease;
+  -o-transition:
+    background-color 0.4s ease,
+    color 0.4s ease;
   transition:
     background-color 0.4s ease,
     color 0.4s ease;
@@ -114,15 +133,29 @@ h6 {
   background: var(--bg-color-lt);
   margin-left: 1em;
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 2.2em;
   width: 2.2em;
   border-radius: 2rem;
   right: 0.3em;
 
   /* Already includes transition for icon */
+  -webkit-transition:
+    background-position 0.5s ease-out,
+    border 0.2s ease-out,
+    color 0.5s ease-out;
+  -o-transition:
+    background-position 0.5s ease-out,
+    border 0.2s ease-out,
+    color 0.5s ease-out;
   transition:
     background-position 0.5s ease-out,
     border 0.2s ease-out,
@@ -138,17 +171,25 @@ h6 {
 
 .custom-button .icon svg {
   width: 1.1em;
+  -webkit-transition: -webkit-transform 0.3s ease-out;
+  transition: -webkit-transform 0.3s ease-out;
+  -o-transition: transform 0.3s ease-out;
   transition: transform 0.3s ease-out;
+  transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
   will-change: transform;
   color: var(--secondary-color);
 }
 
 .custom-button:hover .icon svg {
-  transform: translateX(0.1em) rotate(-25deg);
+  -webkit-transform: translateX(0.1em) rotate(-25deg);
+      -ms-transform: translateX(0.1em) rotate(-25deg);
+          transform: translateX(0.1em) rotate(-25deg);
 }
 
 .custom-button:active .icon {
-  transform: scale(0.95);
+  -webkit-transform: scale(0.95);
+      -ms-transform: scale(0.95);
+          transform: scale(0.95);
 }
 .title {
   margin: 0 auto;
@@ -160,7 +201,8 @@ h6 {
 }
 
 #main-desc {
-    justify-self: center;
+    -ms-grid-column-align: center;
+        justify-self: center;
     margin: 1rem;
 }
 
@@ -180,7 +222,8 @@ h6 {
     }
 
     .custom-button {
-        justify-self: left;
+        -ms-grid-column-align: left;
+            justify-self: left;
     }
 }
 
